fix(ui): Ensure close button of notification pop-up is visible

--- a/g2p_theme/static/src/css/style.css
+++ b/g2p_theme/static/src/css/style.css
@@ -352,7 +352,7 @@ main {
 
 .o_notification_close,
 .o_notification_close:hover {
-    color: #ffffff !important;
+    color: #333333 !important;
     opacity: 1;
     font-weight: 100;
     text-shadow: none;
